hopefully fixed jekyllscholar 2

--- a/_config.yml
+++ b/_config.yml
@@ -188,7 +188,7 @@ plugins:
   - jekyll-imagemagick
   - jekyll-minifier
   - jekyll-paginate-v2
-  - jekyll-scholar
+  - jekyll/scholar
   - jekyll-sitemap
   - jekyll-target-blank
   - jekyll-twitter-plugin
