--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: srtee
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
-linkedin_username: # your LinkedIn user name
+linkedin_username: shern-tee-8172241b3
 scholar_userid: JgXtTSUAAAAJ
 semanticscholar_id: # your Semantic Scholar ID
 orcid_id: 0000-0003-2701-005X
@@ -310,7 +310,7 @@ enable_navbar_social:       false  # enables displaying social links in the
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
 enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
-enable_header_netlify_identity:    true   # enables Netlify Identity button in header
+enable_header_netlify_identity:    false  # enables Netlify Identity button in header
 
 # -----------------------------------------------------------------------------
 # Library versions
