--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,7 +21,7 @@ collections:
     files:
       - label: "About Page"
         name: "about"
-        file: "site/_pages/about.md"
+        file: "_pages/about.md"
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "about"}
           - {label: "Title", name: "title", widget: "string"}
